--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/tinker": "^1.0",
         "lcobucci/jwt": "3.3.2",
         "league/flysystem-aws-s3-v2": "^1.0",
-        "nwidart/laravel-modules": "^4.1"
+        "nwidart/laravel-modules": "^4.1",
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
