--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "vue": "^2.5.17"
     },
     "dependencies": {
-        "laravel-echo": "^1.10.0"
+        "laravel-echo": "^1.10.0",
+        "socket.io-client": "^4.1.2"
     }
 }
