--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "cviebrock/eloquent-sluggable": "4.8.*",
         "fideloper/proxy": "^4.0",
         "fruitcake/laravel-cors": "^2.0",
         "kreait/firebase-php": "5.2",
@@ -16,7 +17,7 @@
         "laravel/passport": "^7.5",
         "laravel/tinker": "^1.0",
         "lcobucci/jwt": "3.3.2",
-        "league/flysystem-aws-s3-v3":"^1.0",          
+        "league/flysystem-aws-s3-v3": "^1.0",
         "nwidart/laravel-modules": "^4.1",
         "predis/predis": "^1.1"
     },
